fix: [GAMA-249] complete address isn't visible in windows smaller pc

--- a/src/component/DeliveryAddressPopUp/DeliveryAddressPopUp.style.scss
+++ b/src/component/DeliveryAddressPopUp/DeliveryAddressPopUp.style.scss
@@ -87,7 +87,7 @@
       .allAddressAndEditBlock {
         @include mobile {
           height: 230px;
-          padding-bottom: 20px;
+          padding-bottom: 50px;
         }
 
         @include desktop {
